fp-library/tests/ui/rc_fn_not_send.stderr
error[E0405]: cannot find trait `SendLiftFn` in this scope
 --> tests/ui/rc_fn_not_send.rs:8:24
  |
8 |     let _ = <RcFnBrand as SendLiftFn>::new(|x: i32| x);
  |                           ^^^^^^^^^^ not found in this scope
  |
help: consider importing this trait
  |
1 + use fp_library::classes::SendLiftFn;
  |

warning: unused import: `classes::send_clone_fn::SendCloneFn`
 --> tests/ui/rc_fn_not_send.rs:3:2
  |
3 |     classes::send_clone_fn::SendCloneFn,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
